<resources>
    <string name="app_name">MovieProject</string>
    <string name="action">Action</string>
    <string name="animation">Animation</string>
    <string name="adventure">Adventure</string>
    <string name="share_text">I\'m Watching this movie</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="share">Share</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Comedy">Comedy</string>
    <string name="Family">Family</string>
    <string name="Fantasy">Fantasy</string>
    <string name="History">History</string>
    <string name="Horror">Horror</string>
    <string name="Music">Music</string>
    <string name="Mystery">Mystery</string>
    <string name="Romance">Romance</string>
    <string name="Science_Fiction">Science Fiction</string>
    <string name="TV_Movie">TV Movie</string>
    <string name="Thriller">Thriller</string>
    <string name="War">War</string>
    <string name="Western">Western</string>
    <string name="Documentary">Documentary</string>
    <string name="Crime">Crime</string>
    <string name="Drama">Drama</string>
</resources>